# newrepo

./: .arrays.c.swp  1.c  1cC  CARr  CArr  CMakeLists.txt  ConFlow  Funct  Functions.c  Months  NIntro  README.md  SysCall  array1.c  arrays.c  bitwise-ops.c  codeC  codecamp.c  exit  faceVal  faceValue  face_val.c  fileysOps.c  flowControl.c  funct  funct.c  funct.c~  header.h  input-output.c  introduction.c  lists.h  main.h  months.c  new_switch.c  newrepo.code-workspace  out.txt  po  point.c  pointer  pointer.c  (+7 more)
